--- a/tox.ini
+++ b/tox.ini
@@ -22,12 +22,13 @@ extras =
 commands = {posargs}
 
 [testenv:lint]
+passenv = BLACK_ARGS
 basepython = python3
 skip_install = true
 deps =
     -rlint-requirements.txt
 commands =
-    black -l 78 --py36 --safe src/rush test/
+    black -l 78 {env:BLACK_ARGS:} --py36 --safe src/rush test/
     flake8 src/rush test
     pylint src/rush test
     mypy src/rush
