Add an environment to check commit messages
This should help with the consistency of the project's commit history.

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,13 @@ extras =
     redis
 commands = {posargs}
 
+[testenv:commitlint]
+basepython = python3
+deps =
+    gitlint >= 0.8.1
+commands =
+    gitlint lint
+
 [testenv:lint]
 passenv = BLACK_ARGS
 basepython = python3
