--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ matrix:
     - python: 3.6
       env: TOXENV=docs
     - python: 3.7
+      env: TOXENV=commitlint
+      dist: xenial
+      sudo: true
+    - python: 3.7
       env: TOXENV=lint
            BLACK_ARGS='--check'
       dist: xenial
