--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 cache: pip
 before_script:
-- pip install tox
+- pip install tox codecov
 
 # test script
 script:  tox
@@ -28,3 +28,6 @@ matrix:
            BLACK_ARGS='--check'
       dist: xenial
       sudo: true
+
+after_success:
+  - codecov
