--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ classifiers =
     Programming Language :: Python,
     Programming Language :: Python :: 3.6,
     Programming Language :: Python :: 3.7
+requires =
+    attrs (>= 18.1.0)
 
 [options]
 python_requires = >= 3.6
