Always recreate venv for toying with the library
And since we will primarily use this for experimenting with rush in a
virtual environment where it's installed, let's also, just default
{posargs} to use Python, so we can do `tox -e venv` instead of always
having to do `tox -e venv -- python`. This still allows us to override
that though, so the feature set works out well.

--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,11 @@ commands =
     coverage report -m
 
 [testenv:venv]
+recreate = true
 basepython = python3
-deps =
-    .
 extras =
     redis
-commands = {posargs}
+commands = {posargs:python}
 
 [testenv:commitlint]
 basepython = python3
