Add Redis storage backend
Add redis as an option for storing a throttle's limit data. This also
adds our exceptions module as our RedisStore will need the ability to
raise some exceptions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,16 @@ rush = py.typed
 where = src
 
 [options.extras_require]
-redis = redis
+redis =
+    redis
+    rfc3986 >= 1.2.0
 
 [bdist_wheel]
 universal = 1
+
+
+[mypy-redis]
+ignore_missing_imports = True
+
+[mypy-rfc3986]
+ignore_missing_imports = True
