Fix up our setup.cfg to actually install attrs
In trying to build our documentation with autodoc and sphinx, I found
that even though we were installing rush into the virtualenv, we weren't
actually installing its dependencies. This fixes up the setup.cfg to do
the right thing so we can install rush's dependencies and distributions
will work.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author = Ian Stapleton Cordasco
 author-email = graffatcolmingov@gmail.com
 keywords = throttles throttle algorithm gcra redis
 license = MIT
-license-file = LICENSE
+license-files = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable,
     Environment :: Console,
@@ -17,17 +17,17 @@ classifiers =
     Programming Language :: Python,
     Programming Language :: Python :: 3.6,
     Programming Language :: Python :: 3.7
-requires =
-    attrs (>= 18.1.0)
 
 [options]
-python_requires = >= 3.6
+python-requires = >= 3.6
 include-package-data = True
 packages = find:
 ; Presently setuptools needs package-dir defined here and in setup.py
 ; https://github.com/pypa/setuptools/issues/1136
 package-dir =
     = src
+install-requires =
+    attrs >= 18.1.0
 
 [options.package_data]
 rush = py.typed
@@ -40,10 +40,7 @@ redis =
     redis
     rfc3986 >= 1.2.0
 
-[bdist_wheel]
-universal = 1
-
-
+; mypy config
 [mypy-redis]
 ignore_missing_imports = True
 
