--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,8 @@ basepython = python3
 deps =
     doc8
     -rdoc/source/requirements.txt
+extras =
+    redis
 commands =
     doc8 doc/source/
     sphinx-build -E -W -c doc/source/ -b html doc/source/ doc/build/html
