Fix classifiers list for 2018.12.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,12 +10,12 @@ keywords = throttles throttle algorithm gcra redis
 license = MIT
 license-files = LICENSE
 classifiers =
-    Development Status :: 5 - Production/Stable,
-    Environment :: Console,
-    Intended Audience :: Developers,
-    License :: OSI Approved :: MIT License,
-    Programming Language :: Python,
-    Programming Language :: Python :: 3.6,
+    Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
 
 [options]
