--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ skip_install = true
 deps =
     -rlint-requirements.txt
 commands =
-    black -l 78 {env:BLACK_ARGS:} --py36 --safe src/rush test/
+    black -l 78 {env:BLACK_ARGS:} --target-version py36 --safe src/rush test/
     flake8 src/rush test
     pylint src/rush test
     mypy src/rush
