--- a/setup.cfg
+++ b/setup.cfg
@@ -39,10 +39,15 @@ where = src
 redis =
     redis
     rfc3986 >= 1.2.0
+local =
+    cachetools >= 4.0.0
 
 ; mypy config
 [mypy-redis]
 ignore_missing_imports = True
 
 [mypy-rfc3986]
+ignore_missing_imports = True
+
+[mypy-cachetools]
 ignore_missing_imports = True
