--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     coverage
 extras =
     redis
+    local
 commands =
     coverage run --parallel-mode -m pytest {posargs}
     coverage combine
@@ -19,6 +20,7 @@ recreate = true
 basepython = python3
 extras =
     redis
+    local
 commands = {posargs:python}
 
 [testenv:commitlint]
@@ -50,6 +52,7 @@ deps =
     -rdoc/source/requirements.txt
 extras =
     redis
+    local
 commands =
     doc8 doc/source/
     sphinx-build -E -W -c doc/source/ -b html doc/source/ doc/build/html
