--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os: linux
+dist: xenial
 language: python
 cache: pip
 before_script:
@@ -9,25 +11,23 @@ notifications:
   on_success: change
   on_failure: always
 
-matrix:
+jobs:
   include:
     - python: 3.6
       env: TOXENV=py36
     - python: 3.7
-      dist: xenial
-      sudo: true
+      env: TOXENV=py37
+    - python: 3.8
+      env: TOXENV=py37
+    - python: 3.9
       env: TOXENV=py37
     - python: 3.6
       env: TOXENV=docs
     - python: 3.7
       env: TOXENV=commitlint
-      dist: xenial
-      sudo: true
     - python: 3.7
       env: TOXENV=lint
            BLACK_ARGS='--check'
-      dist: xenial
-      sudo: true
 
-after_success:
+after_script:
   - codecov
