Fix last of the linter errors
So the redis-py typeshed stubs are wrong and I intend to fix them. Also,
trying to handle async and sync code in the same decorator seems to be a
_really_ bad idea but this is contrib code so I'm not that bothered by
it.

Finally, let's prepare for `python setup.py check -r -s` to go away and
start using `twine check` but let's make it easy to lint by using a
temporary directory intended specifically for it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,14 @@
 name = rush
 ;version = attr: rush.__version__
 description = A library for throttling algorithms
-long-description = file: README.rst
-home-page = https://github.com/sigmavirus24/rush
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+home_page = https://github.com/sigmavirus24/rush
 author = Ian Stapleton Cordasco
-author-email = graffatcolmingov@gmail.com
+author_email = graffatcolmingov@gmail.com
 keywords = throttles throttle algorithm gcra redis
 license = MIT
-license-files = LICENSE
+license_files = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable
     Environment :: Console
@@ -19,14 +20,14 @@ classifiers =
     Programming Language :: Python :: 3.7
 
 [options]
-python-requires = >= 3.6
-include-package-data = True
+python_requires = >= 3.6
+include_package_data = True
 packages = find:
 ; Presently setuptools needs package-dir defined here and in setup.py
 ; https://github.com/pypa/setuptools/issues/1136
-package-dir =
+package_dir =
     = src
-install-requires =
+install_requires =
     attrs >= 18.1.0
 
 [options.package_data]
@@ -39,10 +40,3 @@ where = src
 redis =
     redis
     rfc3986 >= 1.2.0
-
-; mypy config
-[mypy-redis]
-ignore_missing_imports = True
-
-[mypy-rfc3986]
-ignore_missing_imports = True
