--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ commands =
 passenv = BLACK_ARGS
 basepython = python3
 skip_install = true
+ignore_errors = true
 deps =
     -rlint-requirements.txt
 commands =
@@ -41,6 +42,9 @@ commands =
     mypy src/rush
     bandit -r src/rush
     python setup.py check -r -s
+    python setup.py -q bdist_wheel --dist-dir=./lint-dist
+    twine check lint-dist/*
+    python scripts/cleanup-lint-dist.py
 
 # Documentation
 [testenv:docs]
